--- a/infproducto.css
+++ b/infproducto.css
@@ -3,14 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+body{
+    font-family: 'Baloo Tammudu 2', cursive;
+}
 nav{
     margin-top: 10px;  
 }
 .navegacion{
     
     margin: 10px auto;
-    background: #ffffff;
+    background:#bac94a;
     text-align: center;
     border-style: groove;
     
@@ -29,8 +31,8 @@ nav{
    
     display: block;
     padding: 10px 20px;
-    color: maroon;
-    font-family: Arial, Helvetica, sans-serif;
+    color: #fff;
+    
     text-decoration: none;
 }
 
@@ -41,7 +43,7 @@ nav{
 }
 .submenu{
     position: absolute;
-    background: #333;
+    background: #213502;
     width: 200%;
     visibility: hidden;
     opacity: 0;
@@ -51,8 +53,8 @@ nav{
 .submenu li a{
     display: block;
     padding: 15px;
-    color: #ffffff;
-    font-family: Arial, Helvetica, sans-serif;
+    color: ;
+    
     text-decoration: none;
 }
 .menu li:hover .submenu{
@@ -68,6 +70,7 @@ aside{
     position: relative;
     list-style: none;
     width: 155px;
+    background-color: #7c744e
 }
 
 .tabla_filtro  li{
@@ -77,14 +80,14 @@ aside{
 .tabla_filtro > li {
     display: block;
 
-    color: #eceff1;
-    font-family: Arial, Helvetica, sans-serif;
+    color: #fff;
+    
     font-size: small;
     text-decoration: none;
     
 }
 .tabla_filtro li label:hover{
-    color: #ce7d35;
+    color: #213502;
     transition: all .3s;
     
 }
@@ -92,6 +95,28 @@ aside{
 .clasificacion_filtro{
     display: block;
     text-align: center;
-    background-color: #333;
+    background-color:#213502;
     
+}
+    section{
+        color: #3a3c35;
+        margin-left:;
+    }
+.produtoanddescription{
+    display: block;
+    text-align: justify;
+    margin-left: 20%;
+    margin-top: 100px;
+}
+.añadelo_compra>h1{
+    font-weight: 200;
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+}
+.linea{
+    background-color: #213502;
+    height: 5px;
+    width: 100%;
+    display: block;
 }
