--- a/secciones.css
+++ b/secciones.css
@@ -94,6 +94,8 @@ up,p {
     
     background-color: #ffffff;
 
+    display: flex;
+
     margin-top: 5px;
     margin-bottom: 5px;
     margin-left: 15px;
@@ -105,6 +107,8 @@ up,p {
     width: 190px;
     height: 170px;
     background-color: #ffffff;
+
+    display: flex;
 
     margin-top: 5px;
     margin-bottom: 5px;
@@ -118,6 +122,8 @@ up,p {
     height: 170px;
     background-color: #ffffff;
 
+    display: flex;
+
     margin-top: 5px;
     margin-bottom: 5px;
     margin-left: 15px;
@@ -129,6 +135,8 @@ up,p {
     width: 190px;
     height: 170px;
     background-color: #ffffff;
+
+    display: flex;
     
     margin-top: 5px;
     margin-bottom: 5px;
@@ -137,28 +145,78 @@ up,p {
 }
 
 .favimg1 {
+
+    width: 165px;
+
     padding-top: 10px;
-    padding-left: 20px;
+    padding-left: 5px;
+}
+
+.textin1 {
+    height: 170px;
+    width: 145px;
+    font-size: 13px;
+    font-family: Helvetica;
+
+    padding-top: 60px;
+    padding-right: 30px;
+
 }
 
 .favimg2 {
+
+    width: 165px;
+
     padding-top: 10px;
-    padding-left: 20px;
+    padding-left: 5px;
+}
+
+.textin2 {
+    height: 170px;
+    width: 145px;
+    font-size: 13px;
+    font-family: Helvetica;
+
+    padding-top: 60px;
+    padding-right: 30px;
+
 }
 
 .favimg3 {
+
+    width: 165px;
+
     padding-top: 10px;
-    padding-left: 20px;
+    padding-left: 5px;
+}
+
+.textin3 {
+    height: 170px;
+    width: 145px;
+    font-size: 13px;
+    font-family: Helvetica;
+
+    padding-top: 60px;
+    padding-right: 30px;
+
 }
 
 .favimg4 {
-    padding-top: 10px;
-    padding-left: 20px;
+    
+    width: 165px;
+
+    padding-top: 15px;
+    padding-left: 5px;
+
 }
 
 .textin4 {
+    height: 170px;
+    width: 145px;
+    font-size: 13px;
+    font-family: Helvetica;
 
-    height: 50px;
-    width: 50px;
-    font-size: 10px;
+    padding-top: 60px;
+    padding-right: 30px;
+
 }
