--- a/principal.css
+++ b/principal.css
@@ -6,7 +6,7 @@
 
 body{
     size: 100%;
-    background: linear-gradient(150deg, #ff9898,  #97e881, #5d78ff);
+    background: linear-gradient(150deg, #ff9898,  #cdf4ff, #93a4f9);
     background-size: 400% 300%;
     animation: BgGradient 5s ease infinite;
     
