--- a/secciones.css
+++ b/secciones.css
@@ -49,6 +49,23 @@
 
     overflow: hidden;
 }
+
+.contenedor2 {
+
+    display: flex;
+    width: 98%;
+    height: 25px;
+    color: #fff;
+    font-size: 25px;
+    line-height: 25px;
+    text-align: center;
+    margin: auto;
+    margin-top: 0;
+    background-color: rgb(133, 122, 255);
+
+    overflow: hidden;
+}
+
 p {
     flex: 50%;
     text-align: right;
