--- a/principal.css
+++ b/principal.css
@@ -85,3 +85,22 @@ body{
     font-family: Helvetica;
     font-size: small;
 }
+
+/*aqui esta el css del espacio de los anunciós */
+
+.prueba{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.laundry{
+    padding: auto;
+    padding-left: 20px;
+    text-align: justify;
+}
+.pag{
+    width: 165px;
+    height: 185px;
+    
+}
