prueba section empresas

--- a/infproducto.css
+++ b/infproducto.css
@@ -53,7 +53,7 @@ nav{
 .submenu li a{
     display: block;
     padding: 15px;
-    color: ;
+    color: #ffffff;
     
     text-decoration: none;
 }
