--- a/principal.css
+++ b/principal.css
@@ -26,12 +26,11 @@ body{
     height: 10%;
     width: 100%;
     display: flex;
-    flex-direction: row;
 }
 .cabecera-izq{
     flex: 10%;
     height: 30px;
-    padding-top: 5px;
+    padding-top: 9px;
     padding-left: 30PX;
 
  }
@@ -40,8 +39,8 @@ body{
     height: 30px;
     width: 300px;
     padding: auto;
-    padding-top: 9px;
-    padding-right: 100px;
+    padding-top: 12px;
+    padding-right: 150px;
     font-size: 12px;
     color: rgb(0, 0, 0);
 }
@@ -54,27 +53,87 @@ body{
     padding-bottom: 0;
     text-align: center;   
 }
-.cabecera2{
-    height: 150px;
-    width: 100%;
+nav{
+    margin-top: 10px;  
+}
+.navegacion{
+    
     display: flex;
-    flex-direction: row;
-    background-color:#24ae63;
+    margin: 10px auto;
+    background:#24ae63;
+    text-align: center;
+    
     
 }
+
+.menu {
+    
+    flex: 60%;
+    padding: auto;
+    padding-top: 55px;
+    padding-right: 60px;
+}
+.navegacion ul{
+    list-style: none;
+    
+
+}
+.menu > li{
+    position: relative;
+    display: inline-block;
+}
+
+.menu > li >a{
+   
+    display: block;
+    padding: 10px 20px;
+    color: #fff;
+    
+    text-decoration: none;
+}
+
+.menu li a:hover{
+    color: #18683c;
+    transition: all .3s;
+
+}
+.submenu{
+    position: absolute;
+    background: #509221;
+    width: 200%;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 1.3s;
+}
+
+.submenu li a{
+    display: block;
+    padding: 15px;
+    color: #ffffff;
+    
+    text-decoration: none;
+}
+.menu li:hover .submenu{
+    display: block;
+    visibility: visible;
+    opacity: 1;
+
+}
+
 .logo-texto{
-    flex: 90%;
+    flex: 20%;
     padding-left: 30px;
     padding-top: 10px;
     text-align: left;
 }
+
 .carrito{
-    flex: 10%;
+    flex: 5%;
     height: 70px;
     width: 175px;
     margin-top: 40px;
     margin-left: 0px;
-    margin-right: 160px;
+    margin-right: 65px;
     padding-top: 10px;
     padding-left: 8px;
     padding-right: 10px;
