--- a/secciones.css
+++ b/secciones.css
@@ -246,3 +246,54 @@ up,p {
     padding-right: 30px;
 
 }
+
+.Contenedor_Empresas {
+
+    margin-top: 5px;
+    border: 2px solid #000;
+
+    background-image: url(IMAGEN/fondo_empresas.jpg);
+    background-size: cover;
+    border: 1PX solid #0000;
+    
+    height: 600px;
+    width: 100%;
+}
+
+.Texto {
+    background-color: #fff;
+    color: #000;
+
+    height: 275px;
+    width: 600px;
+
+    text-align: center;
+
+    margin: auto;
+    margin-left: 30%;
+    margin-top: 10%;
+    margin-right: 25%;
+}
+
+.division1 h2 {
+    padding: auto;
+    padding-top: 2%;
+    font-family: sans-serif;
+    font-size: 30px;
+}
+
+.division2 h1{
+
+    font-family: sans-serif;
+    font-size: 80px ;
+}
+
+.division3{
+
+    font-family: sans-serif;
+    font-size: 15px;
+
+    padding: auto;
+    padding-right: 18%;
+    
+  }
