--- a/principal.css
+++ b/principal.css
@@ -146,24 +146,37 @@ nav{
 }
 
 /*aqui esta el css del espacio de los anunciós */
-
+.S-A{
+    display: block;
+}
 .prueba{
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    width: 100%;
+    
 }
 .laundry{
+    margin: auto;
+    margin-left: 10px;
+    margin-bottom: 10px;
     padding: auto;
-    padding-left: 20px;
+    padding-left: 10px;
     text-align: justify;
 }
 .pag{
-    width: 165px;
+    width: 150px;
     height: 185px;
     
 }
 
+.laundry > img{
+    max-width: 100%;
+    height: auto;
+}
+
+
+ /*victor*/
 .monsa {
 
 background-color: #FFFFFF;
@@ -208,3 +221,4 @@ text-align: center;
  padding-top: 10px;   
 
 }
+
