--- a/CSS/secciones.css
+++ b/CSS/secciones.css
@@ -252,7 +252,7 @@ up,p {
     margin-top: 5px;
     border: 2px solid #000;
 
-    background-image: url(IMAGEN/fondo_empresas.jpg);
+    background-image: url(/IMAGEN/fondo_empresas.jpg);
     background-size: cover;
     border: 1PX solid #0000;
     
