--- a/CSS/infproducto.css
+++ b/CSS/infproducto.css
@@ -68,7 +68,7 @@ nav{
 }
 aside{
     
-    margin-left: 20%%;
+    margin-left: 20%;
     position: relative;
     list-style: none;
     width: 155px;
