--- a/CSS/secciones.css
+++ b/CSS/secciones.css
@@ -299,9 +299,28 @@ up,p {
   }
 
   /*secion de productos*/
-  .tb_cap{
+
+.tb_cap{
       display: flex;
       flex-wrap: wrap;
-      border: black;
+      border-style: solid;
+      border-width: 2px;
       border-color: black;
-  }
+      width: 100px;
+    margin: auto;
+}
+}
+
+.domicilio{
+    border: 5px solid green;
+    display: inline-block;
+}
+
+.retiro{
+    border: 5px solid red;
+    display: inline-block;
+}
+.stock{
+    border: 5px solid red;
+    display: inline-block;
+}
