--- a/CSS/principal.css
+++ b/CSS/principal.css
@@ -40,7 +40,8 @@ body{
     width: 300px;
     padding: auto;
     padding-top: 11px;
-    padding-right: 120px;
+    padding-right: 100px;
+    padding-left: 100px;
     font-size: 12px;
     color: rgb(0, 0, 0);
 }
@@ -203,23 +204,23 @@ text-align: center;
     color: #000;
 
     font-size: 15px;
-    font-family: Helvetica;
-
-text-align: center;
     padding-top: 10px;   
 
 }
 
+.info-contacto p {
+    text-align: center;
+}
+
 .botoncontactanos {
     
-    font-family: Helvetica;
     text-align: center;  
     
- height: 20px;
- width: 100%;  
+    height: 20px;
+    width: 100%;  
     
     padding: auto;
- padding-top: 10px;   
+    padding-top: 10px;   
 
 }
 
