--- a/CSS/seccion-lavanderia.css
+++ b/CSS/seccion-lavanderia.css
@@ -28,14 +28,25 @@ aside{
   margin-left: 1%;
   position: relative;
   list-style: none;
-  width: 155px;
+
+  width: 230px;
+  height: 450px;
+
   background-color: #24ae63
 }
 
 .tabla_filtro  li{
   position: relative;
   list-style: none;
+
 }
+
+.filtro li {
+  padding: 3%;
+
+  font-size: 16px;
+}
+
 .tabla_filtro > li {
   display: block;
 
@@ -81,10 +92,17 @@ body {
 
 #aside_lavand {
   grid-area: aside_lavand;
+
+  margin: 0;
+  padding: 0;
+  margin-left: 25%;
 }
 
 #main-lavan {
   grid-area: main-lavan;
+
+  padding: 0;
+  margin: 0;
 }
 
 .S-A {
@@ -110,7 +128,7 @@ body {
 
 @media (min-width: 600px) {
   .grid-container {
-    grid-template-columns: 200px auto;
+    grid-template-columns: 340px auto;
     grid-template-areas:
     "dtop1 dtop1"
     "titulo_lavan titulo_lavan"
@@ -138,6 +156,7 @@ body {
   padding: 0;
 
   display: flex;
+  margin-left: 7%;
 }
 
 #main-lavan-prodc3-4 {
@@ -145,6 +164,7 @@ body {
   padding: 0;
 
   display: flex;
+  margin-left: 7%;
 }
 
 .prdNuno, .prdNdos, .prdNtres, .prdNcuatro {
@@ -169,6 +189,10 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
+
+  padding: 0;
+  padding-top: 1%;
+  background-color: #c4c4c4;
   
 }
 .laundry{
