--- a/CSS/CarProdu1.css
+++ b/CSS/CarProdu1.css
@@ -13,3 +13,7 @@
     text-decoration: center black;
     font-family: Arial, Helvetica, sans-serif;
 }
+.division_imagen_LG{
+    margin-right: 50%;
+    
+}
