--- a/CSS/productos.css
+++ b/CSS/productos.css
@@ -328,31 +328,48 @@ up,p {
 
 .nav_ventanas {
     margin-top: 1rem;
-    
+    margin-left: 10%;
+    margin-right: 10%;
 }
   
 #contenedor_FT {
-    margin-left: 14%;
-    margin-right: 1%;
-  
+    
+    margin-bottom: 5px;
     background-color: #fff;
+    padding-bottom: 10px;
+}
+#contenedor_FT > h1 {
+    text-align: center
 }
   
 #nav_ventanas_menu {
-    display: flex;
-  }
-  
-#nav_ventanas_menu p {
+    display: inline-flex;
+    height: min-content;
+    
+    margin-left: 10px;
+}
+#nav_ventanas_menu button{
+    background-color: #4CAF50; /* Green */
+    border: none;
+     color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
     margin-right: 2rem;
     cursor: pointer;
+
 }
   
+
 #tablafichat {
     width: 85%;
     height: 450px;
     border-collapse: collapse;
     margin-left: 9%;
     font-size: 13px;
+    
 }
   
 #tablafichat_carac, #tablafichat_carac_desc1,
@@ -369,12 +386,21 @@ up,p {
 }
   
 #contenedor_tec {
-    margin-left: 14%;
-    margin-right: 1%;
-  
+    padding: auto;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 10px;
     background-color: #fff;
+    margin-bottom: 30px;
 }
-  
+
+#contenedor_tec p{
+    align-items: center;
+    text-align: justify;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 #contenedor_tec_sup {
     display: flex;
 }
