--- a/CSS/principal.css
+++ b/CSS/principal.css
@@ -19,40 +19,54 @@ body{
 }
  
 .cabecera1{
+    padding: 0;
     margin: auto;
+
     margin-top: 0px;
     margin-right: 0px;
     margin-left: 0px;
-    height: 10%;
+
+    padding-bottom: 0%;
+
+    height: 20px;
     width: 100%;
     display: flex;
 }
 .cabecera-izq{
     flex: 10%;
     height: 30px;
-    padding-top: 9px;
+    padding-top: 3px;
     padding-left: 30PX;
+    border: #000 solid 1px;
 
  }
 .cabecera-centro{
     flex: 30%;
     height: 30px;
     width: 300px;
-    padding: auto;
-    padding-top: 11px;
-    padding-right: 100px;
-    padding-left: 100px;
+
+    padding: 0;
+    padding-top: 3px;
+
+
     font-size: 12px;
-    color: rgb(0, 0, 0);
+    
+    color: #000;
+
+    border: #000 solid 1px;
 }
 .cabecera-der{
     flex: 60%;
-    height: 23px;
+
+    height: 30px;
     width: 350px;
-    padding-top: 9px;
-    padding-left: 80px;
+
+    padding-top: 3px;
+    padding-left: 60px;
     padding-bottom: 0;
+
     text-align: center;   
+    border: #000 solid 1px;
 }
 nav{
     margin-top: 10px;  
