--- a/CSS/product04.css
+++ b/CSS/product04.css
@@ -23,7 +23,7 @@ body{
   display: block;
   width: 98%;
 
-  border-style: outset;
+  border-style:inherit;
 }
 
 /*primera parte*/
@@ -32,15 +32,75 @@ body{
   display: flex;
 
   width: 100%;
-  height: 610px;
+  height: 650px;
 
   background-color: #fff;
 }
 
+.rodutoanddescription__img-info__img {
+  padding: 0;
+  margin: 0;
+
+  width: 100%;
+  height: 650px;
+}
+
+.produtoanddescription__img-info__img p {
+  padding: 0;
+  margin: 0;
+  margin-left: 42%;
+  padding-left: 1%;
+
+  background-color: #14a9a4;
+
+  height: 30px;
+  width: 20%;
+
+}
+
+.produtoanddescription__img-info__info {
+  padding: 0%;
+  margin: 0;
+
+  height: 650px;
+  width: 100%;
+}
+
+.produtoanddescription__img-info__info__caracteristicas {
+  padding: 0;
+  margin: 0;
+
+  padding-top: 100px;
+}
+
+.produtoanddescription__img-info__info__caracteristicas h1{
+  color: #BFBEBB;
+  font-size: 30px;
+
+  height: 50px;
+
+}
+
+.produtoanddescription__img-info__info__caracteristicas h3 {
+  color: #000;
+
+  font-size: 25px;
+}
+
 /*segunda parte */
+
+.produtoanddescription__img-info__info__entrega {
+  padding: 0;
+  margin: 0;
+
+  padding-top: 50px;
+  padding-left: 20%;
+}
+
 #tabladecap{
   display: block;
-  
+  width: 100%;
+  height: 325px;
 }
 
 #tb_cap{
@@ -93,7 +153,14 @@ body{
   color: red;
   
 }
+#tr_cond p {
+  font-size: 11px;
 
+  padding: 0;
+  margin: 0;
+
+  padding-left: 2%;
+}
 
 /*ofertas personalizadas*/
 .contenedor {
