--- a/CSS/product04.css
+++ b/CSS/product04.css
@@ -86,6 +86,13 @@ body{
   font-size: 25px;
 }
 
+.produtoanddescription__img-info__info__caracteristicas h2 {
+  color: #000;
+  padding-left: 5%;
+  padding-right: 5%;
+  font-size: 25px;
+}
+
 /*segunda parte */
 
 .produtoanddescription__img-info__info__entrega {
