--- a/CSS/product04.css
+++ b/CSS/product04.css
@@ -168,6 +168,34 @@ body{
   padding-left: 2%;
 }
 
+/*LO QUIERO*/
+
+.accion-compra {
+  padding: 0;
+  padding-left: 39%;
+  padding-right: 37%;
+}
+
+.accion-compra button {
+  padding: 15px;
+  display:flex;
+  font-weight: 600;
+  font-size: 20px;
+  color: #ffffff;
+  background-color: #1883ba;
+  border-radius: 6px;
+  border: 2px solid #0016b0;
+}
+
+.accion-compra button:hover{
+    color: #1883ba;
+    background-color: #ffffff;
+}
+
+.accion-comrpa a {
+  text-decoration: none;
+}
+
 /*ofertas personalizadas*/
 
 .contenedor2 {
@@ -180,7 +208,7 @@ body{
   line-height: 25px;
   text-align: center;
   margin: auto;
-  margin-top: 0;
+  margin-top: 20px;
   background-color: rgb(133, 122, 255);
   padding-top: 6px;
   overflow: hidden;
